[tool.poetry]
name = "repeat_identification"
version = "0.1.0"
description = ""
authors = ["Yantong Cai - 蔡炎彤 <yangtcai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
tqdm = "^4.64.0"
pybedtools = "^0.9.0"
torch = "^1.11.0"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1
