[tool.poetry]
name = "repeat_identification"
version = "0.1.0"
description = ""
authors = ["Yantong Cai - 蔡炎彤 <yangtcai@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.27.1"
tqdm = "^4.64.0"
biopython = "^1.79"
torch = {url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
pyfaidx = "^0.7.0"
pandas = "^1.4.2"
torchvision = "^0.12.0"
scipy = "^1.8.1"
tensorboard = "^2.9.1"
pytorch-lightning = "^1.6.4"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.1"
jupyterlab = "^3.4.3"
jupytext = "^1.13.8"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1
